add firebase service

--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -12,5 +12,6 @@
       <mat-icon matSuffix>security</mat-icon>
       <mat-error *ngIf="passwordCtrl.invalid">{{'passwordError' | translate}}</mat-error>
     </mat-form-field>
+    <button mat-stroked-button type="submit">{{'connect' | translate}}</button>
   </mat-card>
 </form>
