--- a/client/src/app/judge/judge.component.html
+++ b/client/src/app/judge/judge.component.html
@@ -1,3 +1,3 @@
-<p>
-  judge works!
-</p>
+<mat-card *ngIf="(judge | async) as judge">
+  <mat-card-title>{{'hello' | translate: {fullName: judge.FullName} }}</mat-card-title>
+</mat-card>
