--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,17 +1,24 @@
 <form [formGroup]="form" (ngSubmit)="submit()">
   <mat-card>
-    <mat-form-field>
-      <mat-label>{{'username' | translate}}</mat-label>
-      <input matInput type="text" [formControl]="usernameCtrl">
-      <mat-icon matSuffix>person</mat-icon>
-      <mat-error *ngIf="usernameCtrl.invalid">{{'usernameError' | translate}}</mat-error>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>סיסמא</mat-label>
-      <input matInput type="password" [formControl]="passwordCtrl">
-      <mat-icon matSuffix>security</mat-icon>
-      <mat-error *ngIf="passwordCtrl.invalid">{{'passwordError' | translate}}</mat-error>
-    </mat-form-field>
-    <button mat-stroked-button type="submit">{{'connect' | translate}}</button>
+    <mat-card-header>
+      <mat-card-title>{{'systemConnection' | translate }}</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <mat-form-field>
+        <mat-label>{{'username' | translate}}</mat-label>
+        <input matInput type="text" [formControl]="usernameCtrl">
+        <mat-icon matSuffix>person</mat-icon>
+        <mat-error *ngIf="usernameCtrl.invalid">{{'usernameError' | translate}}</mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>סיסמא</mat-label>
+        <input matInput type="password" [formControl]="passwordCtrl">
+        <mat-icon matSuffix>security</mat-icon>
+        <mat-error *ngIf="passwordCtrl.invalid">{{'passwordError' | translate}}</mat-error>
+      </mat-form-field>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-stroked-button type="submit">{{'connect' | translate}}</button>
+    </mat-card-actions>
   </mat-card>
 </form>
