--- a/client/src/app/judge/judge.component.html
+++ b/client/src/app/judge/judge.component.html
@@ -1,8 +1,16 @@
 <mat-card *ngIf="judge$ | async as judge">
   <mat-card-header>
     <mat-card-title>{{'hello' | translate: {fullName: judge.name} }}</mat-card-title>
+    <mat-card-subtitle>{{'chooseProject' | translate}}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    
+    <mat-accordion>
+      <mat-expansion-panel *ngFor="let project of projects$ | async">
+        <mat-expansion-panel-header>
+          <mat-panel-title>{{project.desc}}</mat-panel-title>
+        </mat-expansion-panel-header>
+        <app-rating></app-rating>
+      </mat-expansion-panel>
+    </mat-accordion>
   </mat-card-content>
- </mat-card>
+</mat-card>
