--- a/client/src/app/judge/judge.component.html
+++ b/client/src/app/judge/judge.component.html
@@ -4,12 +4,12 @@
     <mat-card-subtitle>{{'chooseProject' | translate}}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    <mat-accordion>
+    <mat-accordion *ngIf="clauses$ | async as clauses">
       <mat-expansion-panel *ngFor="let project of projects$ | async">
         <mat-expansion-panel-header>
-          <mat-panel-title>{{project.desc}}</mat-panel-title>
+          <mat-panel-title><strong>{{project.desc}}</strong></mat-panel-title>
         </mat-expansion-panel-header>
-        <app-rating></app-rating>
+        <app-rating [clauses]="clauses"></app-rating>
       </mat-expansion-panel>
     </mat-accordion>
   </mat-card-content>
