--- a/client/src/app/judge/judge.component.html
+++ b/client/src/app/judge/judge.component.html
@@ -1,11 +1,11 @@
-<mat-card *ngIf="judge$ | async as judge">
+<mat-card  *ngIf="judge && projects && clauses">
   <mat-card-header>
     <mat-card-title>{{'hello' | translate: {fullName: judge.name} }}</mat-card-title>
     <mat-card-subtitle>{{'chooseProject' | translate}}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    <mat-accordion *ngIf="clauses$ | async as clauses">
-      <mat-expansion-panel *ngFor="let project of projects$ | async">
+    <mat-accordion>
+      <mat-expansion-panel *ngFor="let project of projects">
         <mat-expansion-panel-header>
           <mat-panel-title><strong>{{project.desc}}</strong></mat-panel-title>
         </mat-expansion-panel-header>
