--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -3,7 +3,7 @@
     <mat-card-header>
       <mat-card-title>{{'systemConnection' | translate }}</mat-card-title>
     </mat-card-header>
-    <mat-card-content>
+    <mat-card-content *ngIf="!loading">
       <mat-form-field>
         <mat-label>{{'username' | translate}}</mat-label>
         <input matInput type="text" [formControl]="usernameCtrl">
@@ -17,8 +17,10 @@
         <mat-error *ngIf="passwordCtrl.invalid">{{'passwordError' | translate}}</mat-error>
       </mat-form-field>
     </mat-card-content>
-    <mat-card-actions>
+    <mat-card-actions *ngIf="!loading">
       <button mat-stroked-button type="submit">{{'connect' | translate}}</button>
     </mat-card-actions>
+    <mat-spinner *ngIf="loading"></mat-spinner>
   </mat-card>
 </form>
+
