add can activate

--- a/client/src/app/judge/rating/rating.component.html
+++ b/client/src/app/judge/rating/rating.component.html
@@ -2,7 +2,7 @@
   <mat-card-content>
     <ul>
       <li *ngFor="let clause of clauses">
-        <span>{{clause.title}}</span>
+        <span>{{clause.title | translate}}</span>
         <star-rating-control [starType]="'svg'" [numOfStars]="10" formControlName="{{clause.title}}" staticColor="ok"></star-rating-control>
         <span>{{form.value[clause.title]}}/10</span>
       </li>
