--- a/client/src/app/judge/judge.component.html
+++ b/client/src/app/judge/judge.component.html
@@ -1,15 +1,17 @@
-<mat-card  *ngIf="judge && projects && clauses; else loading">
+<mat-card  *ngIf="values$ | async as values; else loading">
   <mat-card-header>
-    <mat-card-title>{{'hello' | translate: {fullName: judge.name} }}</mat-card-title>
+    <mat-card-title>{{'hello' | translate: {fullName: values.judge.name} }}</mat-card-title>
     <mat-card-subtitle>{{'chooseProject' | translate}}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
     <mat-accordion>
-      <mat-expansion-panel *ngFor="let project of projects">
+      <mat-expansion-panel *ngFor="let project of values.projects">
         <mat-expansion-panel-header>
           <mat-panel-title><strong>{{project.desc}}</strong></mat-panel-title>
         </mat-expansion-panel-header>
-        <app-rating *ngIf="clausesMap.has(project.id)" [clauses]="clausesMap.get(project.id)" (update)="updateRating(project, $event)"></app-rating>
+        <app-rating *ngIf="clausesMap.has(project.id)"
+        [clauses]="clausesMap.get(project.id)"
+        (update)="updateRating(values.judge, project, $event)"></app-rating>
       </mat-expansion-panel>
     </mat-accordion>
   </mat-card-content>
