--- a/client/src/app/judge/judge.component.html
+++ b/client/src/app/judge/judge.component.html
@@ -9,9 +9,10 @@
         <mat-expansion-panel-header>
           <mat-panel-title><strong>{{project.desc}}</strong></mat-panel-title>
         </mat-expansion-panel-header>
-        <app-rating *ngIf="clausesMap.has(project.id)"
+        <app-rating *ngIf="clausesMap.has(project.id) && projectLoading !== project.id"
         [clauses]="clausesMap.get(project.id)"
         (update)="updateRating(values.judge, project, $event)"></app-rating>
+        <mat-spinner class="spinner-rating" *ngIf="projectLoading === project.id"></mat-spinner>
       </mat-expansion-panel>
     </mat-accordion>
   </mat-card-content>
