--- a/client/src/app/judge/rating/rating.component.html
+++ b/client/src/app/judge/rating/rating.component.html
@@ -3,16 +3,11 @@
     <ul>
       <li *ngFor="let clause of clauses">
         <span>{{clause.title | translate}}</span>
-        <star-rating-control
-        *ngIf="ctrlMap.has(clause.title)"
-        [starType]="'svg'"
-        [numOfStars]="10"
-        [size]="'large'"
-        [formControl]="ctrlMap.get(clause.title)"
-        staticColor="ok"></star-rating-control>
+        <star-rating-control *ngIf="ctrlMap.has(clause.title)" [starType]="'svg'" [numOfStars]="10" [size]="'large'"
+          [formControl]="ctrlMap.get(clause.title)" staticColor="ok"></star-rating-control>
         <span>{{form.value[clause.title]}}/10</span>
+        <mat-error *ngIf="ctrlMap.get(clause.title).valid"></mat-error>
       </li>
-      <mat-error *ngIf="trlMap.get(clause.title).valid"></mat-error>
     </ul>
   </mat-card-content>
   <mat-card-actions>
