--- a/client/src/app/judge/judge.component.html
+++ b/client/src/app/judge/judge.component.html
@@ -7,7 +7,7 @@
     <mat-accordion>
       <mat-expansion-panel *ngFor="let project of values.projects">
         <mat-expansion-panel-header>
-          <mat-panel-title><strong>{{project.desc}}</strong></mat-panel-title>
+          <mat-panel-title>{{project.desc}}</mat-panel-title>
         </mat-expansion-panel-header>
         <app-rating *ngIf="projectLoading !== project.id && clausesMap.get(project.id) | async as clauses"
         [clauses]="clauses"
