--- a/client/src/app/judge/rating/rating.component.html
+++ b/client/src/app/judge/rating/rating.component.html
@@ -5,16 +5,19 @@
         <ng-template [ngIf]="ctrlMap.has(clause.title)">
           <span class="title">{{clause.title | translate}}</span>
           <div class="stars">
-            <star-rating-control [starType]="'svg'" [numOfStars]="10" [size]="'large'" [formControl]="ctrlMap.get(clause.title)"
-              staticColor="ok"></star-rating-control>
-            <span>{{form.value[clause.title]}}/10</span>
+            <star-rating-control
+            [numOfStars]="10" 
+            [size]="'large'"
+            [formControl]="ctrlMap.get(clause.title)"
+            [staticColor]="f.submitted && ctrlMap.get(clause.title).invalid ? 'negative' : 'ok'"></star-rating-control>
+            <span class="numeric-result">{{form.value[clause.title]}}/10</span>
+            <mat-error *ngIf="f.submitted && ctrlMap.get(clause.title).invalid">{{'chooseRating' | translate}}</mat-error>
           </div>
-          <mat-error *ngIf="f.submitted && ctrlMap.get(clause.title).invalid">{{'chooseRating' | translate}}</mat-error>
         </ng-template>
       </li>
     </ul>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-stroked-button type="submit">{{'rate' | translate}}</button>
+    <button mat-raised-button color="primary" type="submit">{{'rate' | translate}}</button>
   </mat-card-actions>
 </form>
