--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -18,7 +18,7 @@
       </mat-form-field>
     </mat-card-content>
     <mat-card-actions *ngIf="!loading">
-      <button mat-stroked-button type="submit">{{'connect' | translate}}</button>
+      <button  mat-raised-button color="primary" type="submit">{{'connect' | translate}}</button>
     </mat-card-actions>
     <mat-spinner *ngIf="loading"></mat-spinner>
   </mat-card>
