--- a/client/src/app/_variables.scss
+++ b/client/src/app/_variables.scss
@@ -1,2 +1,8 @@
 $mobile-size: 767px;
 $font-family-arial: Arial, Helvetica, sans-serif;
+
+@mixin mobile() {
+    @media screen and (max-width: $mobile-size) {
+        @content;
+    }
+}
