--- a/client/src/app/judge/judge.component.scss
+++ b/client/src/app/judge/judge.component.scss
@@ -13,6 +13,14 @@
 }
 
 .mat-expansion-panel-header-title {
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   font-family: $font-family-arial;
+  @include mobile() {
+    font-size: 1.1rem;
+}
+}
+
+mat-expansion-panel-header {
+  height: auto !important;
+  padding: 10px 24px;
 }
