--- a/client/src/app/judge/rating/rating.component.html
+++ b/client/src/app/judge/rating/rating.component.html
@@ -7,9 +7,9 @@
           <div class="stars">
             <star-rating-control
             [numOfStars]="10" 
-            [size]="'large'"
             [formControl]="ctrlMap.get(clause.title)"
-            [staticColor]="f.submitted && ctrlMap.get(clause.title).invalid ? 'negative' : 'ok'"></star-rating-control>
+            [staticColor]="f.submitted && ctrlMap.get(clause.title).invalid ? 'negative' : 'ok'"
+            [space]="'around'"></star-rating-control>
             <span class="numeric-result">{{form.value[clause.title]}}/10</span>
             <mat-error *ngIf="f.submitted && ctrlMap.get(clause.title).invalid">{{'chooseRating' | translate}}</mat-error>
           </div>
