--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -1,3 +1,6 @@
-<p>
-  admin works!
-</p>
+<!-- <mat-card>
+  <mat-card-header>
+    <mat-card-title>{{'summaryTable' | translate:}}</mat-card-title>
+  </mat-card-header>
+
+</mat-card> -->
