--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -1,6 +1,32 @@
-<!-- <mat-card>
+<mat-card>
   <mat-card-header>
-    <mat-card-title>{{'summaryTable' | translate:}}</mat-card-title>
+    <mat-card-title>{{ 'summaryTable' | translate }}</mat-card-title>
   </mat-card-header>
+  <mat-card-content *ngIf="(projects$ | async) as projects">
+    <mat-table [dataSource]="projects" class="mat-elevation-z8">
+      <ng-container matColumnDef="desc">
+        <mat-header-cell *matHeaderCellDef>{{'projectName' | translate}}</mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{ element.desc }} </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="summary">
+        <mat-header-cell *matHeaderCellDef>{{'summaryNumber' | translate}}</mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{ element.summary }} </mat-cell>
+      </ng-container>
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+    </mat-table>
+  </mat-card-content>
+</mat-card>
 
-</mat-card> -->
+<mat-card>
+    <mat-card-header>
+        <mat-card-title>{{'judgesList' | translate}}</mat-card-title>
+        <mat-card-subtitle>{{'judgesSubList' | translate}}</mat-card-subtitle>
+      </mat-card-header>
+
+      <mat-card-content *ngIf="(judges$ | async) as projects">
+        <form [formGroup]="form" (ngSubmit)="submit()">
+
+        </form>
+      </mat-card-content>
+</mat-card>
