--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -5,11 +5,15 @@
   <mat-card-content *ngIf="(projects$ | async) as projects">
     <mat-table [dataSource]="projects" class="mat-elevation-z8">
       <ng-container matColumnDef="desc">
-        <mat-header-cell *matHeaderCellDef>{{'projectName' | translate}}</mat-header-cell>
+        <mat-header-cell *matHeaderCellDef>{{
+          'projectName' | translate
+        }}</mat-header-cell>
         <mat-cell *matCellDef="let element"> {{ element.desc }} </mat-cell>
       </ng-container>
       <ng-container matColumnDef="summary">
-        <mat-header-cell *matHeaderCellDef>{{'summaryNumber' | translate}}</mat-header-cell>
+        <mat-header-cell *matHeaderCellDef>{{
+          'summaryNumber' | translate
+        }}</mat-header-cell>
         <mat-cell *matCellDef="let element"> {{ element.summary }} </mat-cell>
       </ng-container>
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
@@ -18,15 +22,25 @@
   </mat-card-content>
 </mat-card>
 
-<mat-card>
+<form [formGroup]="form" (ngSubmit)="submit()">
+  <mat-card>
     <mat-card-header>
-        <mat-card-title>{{'judgesList' | translate}}</mat-card-title>
-        <mat-card-subtitle>{{'judgesSubList' | translate}}</mat-card-subtitle>
-      </mat-card-header>
-
-      <mat-card-content *ngIf="(judges$ | async) as projects">
-        <form [formGroup]="form" (ngSubmit)="submit()">
-
-        </form>
-      </mat-card-content>
-</mat-card>
+      <mat-card-title>{{ 'judgesList' | translate }}</mat-card-title>
+      <mat-card-subtitle>{{ 'judgesSubList' | translate }}</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content *ngIf="(judges$ | async) as judges">
+      <mat-form-field>
+        <mat-label>{{ 'judge' | translate }}</mat-label>
+        <mat-select [formControl]="judgesCtrl" required>
+          <mat-option *ngFor="let judge of judges" [value]="judge.uid">
+            {{ judge.name }}
+          </mat-option>
+        </mat-select>
+        <mat-error *ngIf="judgesCtrl.invalid">{{'judgeError' | translate}}</mat-error>
+      </mat-form-field>
+    </mat-card-content>
+    <mat-card-actions *ngIf="!loading">
+    <button mat-raised-button color="primary" type="submit">{{'watchJudge' | translate}}</button>
+    </mat-card-actions>
+  </mat-card>
+</form>
