--- a/client/src/app/judge/judge.component.html
+++ b/client/src/app/judge/judge.component.html
@@ -1,21 +1,18 @@
-<mat-card  *ngIf="values$ | async as values; else loading">
+<mat-card  *ngIf="!loading">
   <mat-card-header>
-    <mat-card-title>{{'hello' | translate: {fullName: values.judge.name} }}</mat-card-title>
+    <mat-card-title>{{'hello' | translate: {fullName: judge.name} }}</mat-card-title>
     <mat-card-subtitle>{{'chooseProject' | translate}}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
     <mat-accordion>
-      <mat-expansion-panel *ngFor="let project of values.projects">
+      <mat-expansion-panel *ngFor="let project of projects">
         <mat-expansion-panel-header>
           <mat-panel-title>{{project.desc}}</mat-panel-title>
         </mat-expansion-panel-header>
-        <app-rating [judge]="values.judge" [project]="project"></app-rating>
+        <app-rating [judge]="judge" [project]="project"></app-rating>
         <!-- <mat-spinner class="spinner-rating" *ngIf="projectLoading === project.id"></mat-spinner> -->
       </mat-expansion-panel>
     </mat-accordion>
   </mat-card-content>
 </mat-card>
-
-<ng-template #loading>
-  <mat-spinner></mat-spinner>
-</ng-template>
+<mat-spinner *ngIf="loading"></mat-spinner>
