--- a/client/src/app/rating/rating.component.html
+++ b/client/src/app/rating/rating.component.html
@@ -3,7 +3,7 @@
     <ul class="clauses-list">
       <li class="clauses-list-li" *ngFor="let clause of clauses">
         <ng-template [ngIf]="ctrlMap.has(clause.title)">
-          <span class="title">{{clause.title | translate}}</span>
+          <span class="title">{{clause.desc}}</span>
           <div class="stars">
             <star-rating-control
             [numOfStars]="5"
@@ -11,7 +11,7 @@
             [formControl]="ctrlMap.get(clause.title)"
             [staticColor]="f.submitted && ctrlMap.get(clause.title).invalid ? 'negative' : 'ok'"
             [space]="'around'"></star-rating-control>
-            <span class="numeric-result">{{form.value[clause.title]}}/10</span>
+            <span class="numeric-result">{{form.value[clause.title]}}/5</span>
             <mat-error *ngIf="f.submitted && ctrlMap.get(clause.title).invalid">{{'chooseRating' | translate}}</mat-error>
           </div>
         </ng-template>
