--- a/client/src/app/rating/rating.component.html
+++ b/client/src/app/rating/rating.component.html
@@ -10,17 +10,18 @@
             [size]="'large'"
             [formControl]="ctrlMap.get(clause.title)"
             [staticColor]="f.submitted && ctrlMap.get(clause.title).invalid ? 'negative' : 'ok'"
-            [space]="'around'"></star-rating-control>
+            [space]="'around'"
+            [disabled]="admin"></star-rating-control>
             <span class="numeric-result">{{form.value[clause.title]}}/5</span>
             <mat-error *ngIf="f.submitted && ctrlMap.get(clause.title).invalid">{{'chooseRating' | translate}}</mat-error>
           </div>
         </ng-template>
       </li>
     </ul>
+    <p class="average" *ngIf="admin && project?.average">{{'average' | translate}}: {{project?.average}}</p>
   </mat-card-content>
-  <mat-card-actions>
+  <mat-card-actions *ngIf="!admin">
     <button mat-raised-button color="primary" type="submit">{{'rate' | translate}}</button>
   </mat-card-actions>
 </form>
 <mat-spinner *ngIf="loading"></mat-spinner>
-
