--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -1,9 +1,10 @@
-<mat-card>
+<mat-card fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="center" fxLayoutGap="10px">
+<mat-card fxFlex="50">
   <mat-card-header>
     <mat-card-title>{{ 'summaryTable' | translate }}</mat-card-title>
   </mat-card-header>
-  <mat-card-content *ngIf="(projects$ | async) as projects">
-    <mat-table [dataSource]="projects" class="mat-elevation-z8">
+  <mat-card-content >
+    <mat-table *ngIf="(projects$ | async) as projects; else loading" [dataSource]="projects" class="mat-elevation-z8">
       <ng-container matColumnDef="desc">
         <mat-header-cell *matHeaderCellDef>{{
           'projectName' | translate
@@ -19,16 +20,19 @@
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
       <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
     </mat-table>
+    <ng-template #loading>
+        <mat-spinner></mat-spinner>
+      </ng-template>
   </mat-card-content>
 </mat-card>
 
-<form [formGroup]="form" (ngSubmit)="submit()">
+<form [formGroup]="form" (ngSubmit)="submit()" fxFlex="50" class="judges">
   <mat-card>
     <mat-card-header>
       <mat-card-title>{{ 'judgesList' | translate }}</mat-card-title>
       <mat-card-subtitle>{{ 'judgesSubList' | translate }}</mat-card-subtitle>
     </mat-card-header>
-    <mat-card-content *ngIf="(judges$ | async) as judges">
+    <mat-card-content *ngIf="(judges$ | async) as judges; else loading">
       <mat-form-field>
         <mat-label>{{ 'judge' | translate }}</mat-label>
         <mat-select [formControl]="judgesCtrl" required>
@@ -39,8 +43,12 @@
         <mat-error *ngIf="judgesCtrl.invalid">{{'judgeError' | translate}}</mat-error>
       </mat-form-field>
     </mat-card-content>
+    <ng-template #loading>
+      <mat-spinner></mat-spinner>
+    </ng-template>
     <mat-card-actions *ngIf="!loading">
     <button mat-raised-button color="primary" type="submit">{{'watchJudge' | translate}}</button>
     </mat-card-actions>
   </mat-card>
 </form>
+</mat-card>
