--- a/client/src/app/admin/admin.component.scss
+++ b/client/src/app/admin/admin.component.scss
@@ -1,9 +1,6 @@
 @import '../variables';
 
-.mat-header-cell {
-    justify-content: center;
-}
-.mat-cell {
+.mat-column-summary{
     justify-content: center;
 }
 
