--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -27,12 +27,12 @@
 </mat-card>
 
 <form [formGroup]="form" (ngSubmit)="submit()" fxFlex="50" class="judges">
-  <mat-card>
+  <mat-card *ngIf="(judges$ | async) as judges; else loading">
     <mat-card-header>
       <mat-card-title>{{ 'judgesList' | translate }}</mat-card-title>
       <mat-card-subtitle>{{ 'judgesSubList' | translate }}</mat-card-subtitle>
     </mat-card-header>
-    <mat-card-content *ngIf="(judges$ | async) as judges; else loading">
+    <mat-card-content >
       <mat-form-field>
         <mat-label>{{ 'judge' | translate }}</mat-label>
         <mat-select [formControl]="judgesCtrl" required>
@@ -43,12 +43,12 @@
         <mat-error *ngIf="judgesCtrl.invalid">{{'judgeError' | translate}}</mat-error>
       </mat-form-field>
     </mat-card-content>
-    <ng-template #loading>
-      <mat-spinner></mat-spinner>
-    </ng-template>
-    <mat-card-actions *ngIf="!loading">
-    <button mat-raised-button color="primary" type="submit">{{'watchJudge' | translate}}</button>
+    <mat-card-actions>
+      <button mat-raised-button color="primary" type="submit">{{'watchJudge' | translate}}</button>
     </mat-card-actions>
   </mat-card>
+  <ng-template #loading>
+    <mat-spinner></mat-spinner>
+  </ng-template>
 </form>
 </mat-card>
