--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -5,16 +5,16 @@
   </mat-card-header>
   <mat-card-content >
     <mat-table *ngIf="(projects$ | async) as projects; else loading" [dataSource]="projects" class="mat-elevation-z8">
+      <ng-container matColumnDef="id">
+        <mat-header-cell *matHeaderCellDef>{{'projectNumber' | translate}}</mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{ element.id }} </mat-cell>
+      </ng-container>
       <ng-container matColumnDef="desc">
-        <mat-header-cell *matHeaderCellDef>{{
-          'projectName' | translate
-        }}</mat-header-cell>
+        <mat-header-cell *matHeaderCellDef>{{'projectName' | translate}}</mat-header-cell>
         <mat-cell *matCellDef="let element"> {{ element.desc }} </mat-cell>
       </ng-container>
       <ng-container matColumnDef="summary">
-        <mat-header-cell *matHeaderCellDef>{{
-          'summaryNumber' | translate
-        }}</mat-header-cell>
+        <mat-header-cell *matHeaderCellDef>{{'summaryNumber' | translate}}</mat-header-cell>
         <mat-cell *matCellDef="let element"> {{ element.summary }} </mat-cell>
       </ng-container>
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
