--- a/client/src/app/judge/judge.component.html
+++ b/client/src/app/judge/judge.component.html
@@ -9,7 +9,7 @@
         <mat-expansion-panel-header>
           <mat-panel-title>{{project.id}}. {{project.desc}}</mat-panel-title>
         </mat-expansion-panel-header>
-        <app-rating [judge]="judge" [project]="project" [admin]="admin"></app-rating>
+        <app-rating *ngIf="judge && project" [judge]="judge" [project]="project" [admin]="admin"></app-rating>
       </mat-expansion-panel>
     </mat-accordion>
     <mat-card-actions *ngIf="admin">
