--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -1,54 +1,59 @@
-<mat-card fxLayout="row" fxLayout.lt-md="column" fxLayoutAlign="center" fxLayoutGap="10px">
-<mat-card fxFlex="50">
-  <mat-card-header>
-    <mat-card-title>{{ 'summaryTable' | translate }}</mat-card-title>
-  </mat-card-header>
-  <mat-card-content >
-    <mat-table *ngIf="(projects$ | async) as projects; else loading" [dataSource]="projects" class="mat-elevation-z8">
-      <ng-container matColumnDef="id">
-        <mat-header-cell *matHeaderCellDef>{{'projectNumber' | translate}}</mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{ element.id }} </mat-cell>
-      </ng-container>
-      <ng-container matColumnDef="desc">
-        <mat-header-cell *matHeaderCellDef>{{'projectName' | translate}}</mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{ element.desc }} </mat-cell>
-      </ng-container>
-      <ng-container matColumnDef="summary">
-        <mat-header-cell *matHeaderCellDef>{{'summaryNumber' | translate}}</mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{ element.summary }} </mat-cell>
-      </ng-container>
-      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
-    </mat-table>
-    <ng-template #loading>
+<mat-card>
+<mat-tab-group>
+  <mat-tab label="{{'summary' | translate}}">
+    <mat-card>
+      <mat-card-header>
+        <mat-card-title>{{ 'summaryTable' | translate }}</mat-card-title>
+      </mat-card-header>
+      <mat-card-content >
+        <mat-table *ngIf="(projects$ | async) as projects; else loading" [dataSource]="projects" class="mat-elevation-z8">
+          <ng-container matColumnDef="id">
+            <mat-header-cell *matHeaderCellDef>{{'projectNumber' | translate}}</mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{ element.id }} </mat-cell>
+          </ng-container>
+          <ng-container matColumnDef="desc">
+            <mat-header-cell *matHeaderCellDef>{{'projectName' | translate}}</mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{ element.desc }} </mat-cell>
+          </ng-container>
+          <ng-container matColumnDef="summary">
+            <mat-header-cell *matHeaderCellDef>{{'summaryNumber' | translate}}</mat-header-cell>
+            <mat-cell *matCellDef="let element"> {{ element.summary }} </mat-cell>
+          </ng-container>
+          <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+          <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+        </mat-table>
+        <ng-template #loading>
+            <mat-spinner></mat-spinner>
+          </ng-template>
+      </mat-card-content>
+    </mat-card>
+  </mat-tab>
+  <mat-tab label="{{'judges' | translate}}">
+    <form [formGroup]="form" (ngSubmit)="submit()" class="judges">
+      <mat-card *ngIf="(judges$ | async) as judges; else loading">
+        <mat-card-header>
+          <mat-card-title>{{ 'judgesList' | translate }}</mat-card-title>
+          <mat-card-subtitle>{{ 'judgesSubList' | translate }}</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content >
+          <mat-form-field>
+            <mat-label>{{ 'judge' | translate }}</mat-label>
+            <mat-select [formControl]="judgesCtrl" required>
+              <mat-option *ngFor="let judge of judges" [value]="judge.uid">
+                {{ judge.name }}
+              </mat-option>
+            </mat-select>
+            <mat-error *ngIf="judgesCtrl.invalid">{{'judgeError' | translate}}</mat-error>
+          </mat-form-field>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-raised-button color="primary" type="submit">{{'watchJudge' | translate}}</button>
+        </mat-card-actions>
+      </mat-card>
+      <ng-template #loading>
         <mat-spinner></mat-spinner>
       </ng-template>
-  </mat-card-content>
-</mat-card>
-
-<form [formGroup]="form" (ngSubmit)="submit()" fxFlex="50" class="judges">
-  <mat-card *ngIf="(judges$ | async) as judges; else loading">
-    <mat-card-header>
-      <mat-card-title>{{ 'judgesList' | translate }}</mat-card-title>
-      <mat-card-subtitle>{{ 'judgesSubList' | translate }}</mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content >
-      <mat-form-field>
-        <mat-label>{{ 'judge' | translate }}</mat-label>
-        <mat-select [formControl]="judgesCtrl" required>
-          <mat-option *ngFor="let judge of judges" [value]="judge.uid">
-            {{ judge.name }}
-          </mat-option>
-        </mat-select>
-        <mat-error *ngIf="judgesCtrl.invalid">{{'judgeError' | translate}}</mat-error>
-      </mat-form-field>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-raised-button color="primary" type="submit">{{'watchJudge' | translate}}</button>
-    </mat-card-actions>
-  </mat-card>
-  <ng-template #loading>
-    <mat-spinner></mat-spinner>
-  </ng-template>
-</form>
+    </form>
+  </mat-tab>
+</mat-tab-group>
 </mat-card>
