--- a/client/src/app/judge/judge.component.html
+++ b/client/src/app/judge/judge.component.html
@@ -4,12 +4,16 @@
     <mat-card-subtitle>{{'chooseProject' | translate}}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    <mat-accordion>
+    <mat-accordion [multi]="true">
       <mat-expansion-panel *ngFor="let project of projects">
         <mat-expansion-panel-header>
           <mat-panel-title>{{project.id}}. {{project.desc}}</mat-panel-title>
         </mat-expansion-panel-header>
-        <app-rating *ngIf="judge && project" [judge]="judge" [project]="project" [admin]="admin"></app-rating>
+        <app-rating *ngIf="judge && project"
+        [judge]="judge"
+        [project]="project"
+        [admin]="admin"
+        (update)="closeAll()"></app-rating>
       </mat-expansion-panel>
     </mat-accordion>
     <mat-card-actions *ngIf="admin">
