--- a/client/src/app/judge/judge.component.scss
+++ b/client/src/app/judge/judge.component.scss
@@ -24,3 +24,11 @@ mat-expansion-panel-header {
   height: auto !important;
   padding: 10px 24px;
 }
+
+.average {
+  color: green;
+}
+
+.mat-expansion-panel-header-title {
+  justify-content: space-between;
+}
