--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -12,11 +12,11 @@
         matSort>
           <ng-container matColumnDef="id">
             <mat-header-cell *matHeaderCellDef mat-sort-header>{{'projectNumber' | translate}}</mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{ element.id }} </mat-cell>
+            <mat-cell *matCellDef="let element"> {{ element?.id }} </mat-cell>
           </ng-container>
           <ng-container matColumnDef="desc">
             <mat-header-cell *matHeaderCellDef mat-sort-header>{{'projectName' | translate}}</mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{ element.desc }} </mat-cell>
+            <mat-cell *matCellDef="let element"> {{ element?.desc }} </mat-cell>
           </ng-container>
           <ng-container matColumnDef="summary">
             <mat-header-cell *matHeaderCellDef mat-sort-header>{{'summaryNumber' | translate}}</mat-header-cell>
