--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -6,25 +6,25 @@
         <mat-card-title>{{ 'summaryTable' | translate }}</mat-card-title>
       </mat-card-header>
       <mat-card-content >
-        <mat-table
+        <table mat-table
         [dataSource]="dataSource"
         class="mat-elevation-z8"
         matSort>
           <ng-container matColumnDef="id">
-            <mat-header-cell *matHeaderCellDef mat-sort-header>{{'projectNumber' | translate}}</mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{ element?.id }} </mat-cell>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'projectNumber' | translate}}</th>
+            <td mat-cell *matCellDef="let element"> {{ element?.id }} </td>
           </ng-container>
           <ng-container matColumnDef="desc">
-            <mat-header-cell *matHeaderCellDef mat-sort-header>{{'projectName' | translate}}</mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{ element?.desc }} </mat-cell>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'projectName' | translate}}</th>
+            <td mat-cell *matCellDef="let element"> {{ element?.desc }} </td>
           </ng-container>
           <ng-container matColumnDef="summary">
-            <mat-header-cell *matHeaderCellDef mat-sort-header>{{'summaryNumber' | translate}}</mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{ element.summary | number:'1.0-2' }} </mat-cell>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>{{'summaryNumber' | translate}}</th>
+            <td mat-cell *matCellDef="let element"> {{ element.summary | number:'1.0-2' }} </td>
           </ng-container>
-          <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-          <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
-        </mat-table>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        </table>
         <ng-template #loading>
             <mat-spinner></mat-spinner>
           </ng-template>
